fix(@clayui/css): Date Picker small screens should have no overflow

--- a/packages/clay-css/src/scss/mixins/_forms.scss
+++ b/packages/clay-css/src/scss/mixins/_forms.scss
@@ -1168,6 +1168,8 @@
 					}
 				}
 			}
+
+			@include clay-generate-media-breakpoints($map);
 		}
 	}
 }
